Added distributed sql cache and API usage limitations

--- a/LightOn/appsettings.Development.json
+++ b/LightOn/appsettings.Development.json
@@ -1,6 +1,13 @@
 {
   "ConnectionStrings": {
-    "LightsOnDb": "Data Source=CLIMCLAFF\\SQLEXPRESS;Initial Catalog=LightsOnDb;Integrated Security=True;MultipleActiveResultSets=true;"
+    "LightsOnDb": "Data Source=CLIMCLAFF\\SQLEXPRESS;Initial Catalog=LightsOnDb;Integrated Security=True;MultipleActiveResultSets=true;",
+    "DistCache_ConnectionString": "Data Source=CLIMCLAFF\\SQLEXPRESS;Initial Catalog=LightsOnCache;Integrated Security=True;MultipleActiveResultSets=true;"
+  },
+
+  "JWT": {
+    "ValidAudience": "User",
+    "ValidIssuer": "http://localhost:7035",
+    "Secret": "QWPAKFAAKVJZIVALFQWOFQWKFQOWIZ"
   },
 
   "Logging": {
@@ -8,5 +15,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
