--- a/LightOn/appsettings.json
+++ b/LightOn/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "LightsOnDb": "Data Source=CLIMCLAFF\\SQLEXPRESS;Initial Catalog=LightsOnDb;Integrated Security=True;MultipleActiveResultSets=true;"
+    "LightsOnDb": "Data Source=CLIMCLAFF\\SQLEXPRESS;Initial Catalog=LightsOnDb;Integrated Security=True;MultipleActiveResultSets=true;",
+    "DistCache_ConnectionString": "Data Source=CLIMCLAFF\\SQLEXPRESS;Initial Catalog=LightsOnCache;Integrated Security=True;MultipleActiveResultSets=true;"
   },
 
   "JWT": {
