--- a/LightOnEmulator/LightOnEmulator.csproj
+++ b/LightOnEmulator/LightOnEmulator.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LightOn\LightOn.csproj" />
+  </ItemGroup>
+
 </Project>
