--- a/LightOn/appsettings.json
+++ b/LightOn/appsettings.json
@@ -16,5 +16,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "89474552975-demd7977g1u5r323844a8smcnvld7r55.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "AllowedHosts": "*"
 }
